@@ -10,7 +10,7 @@ services: docker
 env:
   global:
     - DOCKER_OPTS="--rm -ti -v ${HOME}/.ccache:/root/.ccache -v $(pwd):/mnt -w /mnt" 
-      DOCKER_CNTR="eddelbuettel/rquantlib-testing"
+      DOCKER_CNTR="rquantlib/ci"
       R_BLD_CHK_OPTS="--no-build-vignettes --no-manual"
       
 before_install:
